--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <img src="https://cdn.discordapp.com/avatars/1320975655210450991/e23e8773192be4388bc617a2bbc41817.png?size=128&format=webp&quality=lossless&width=410&height=410" onclick="openNotepad('Aimslut')" alt="Aimslut">
 <img src="https://cdn.discordapp.com/guilds/1328452267673911347/users/186108547489202176/avatars/fe35a225a245d59b402d012f9486da12.png?size=128&format=webp&quality=lossless&width=410&height=410" onclick="openNotepad('Poet')" alt="Poet">
 <img src="https://cdn.discordapp.com/avatars/917306744680615977/6635002898ac1035466754d5329c3c2a.png?size=128&format=webp&quality=lossless&width=410&height=410" onclick="openNotepad('Puppy')" alt="Puppy">
-
+<img src="https://matrix.redditspace.com/_matrix/media/v3/thumbnail/reddit.com/8ieiis4xtkke1?size=128&format=webp&quality=lossless&width=410&height=410" onclick="openNotepad('Queen')" alt="Queen">
+    
     
 <div class="notepad" id="notepad">
     <div class="close-btn">
@@ -86,6 +87,7 @@
             "Aimslut": "Mommy Pommy is such a unique and incredible person. Her strength, kindness, and ability to make everyone around her feel cared for and supported is truly remarkable. She’s always there to lend an ear or give a comforting quiz when it's needed most. I remember a time when I was feeling a little overwhelmed with a something i had upcoming, and Pommy swooped in like a beacon of calm and wisdom. With just a calm aura and a quiz (that i lost horribly at) she really helped me chill and get some much needed rest to prepare me for the next-ish day lol. She has an unwavering belief that things will get better for me and her encouragement gave me the confidence I needed to push through. She's truly one of a kind!",
             "Poet": "I have never met someone who's so good at bringing out the parts that makes us feel gross about ourselves and make us love that and embrace it. As for how Pommy has helped me: Pommy helped me discover that Poetry helps me process my emotions. Sure it was meant as a reference to how wordy I am and how I overthink but the nickname made me wanna write a poem and that poem made me realize I was feeling a lot more underneath. Tons of my emotions have been spilt in my poems and they help me process that which previously just sat in my heart and ached. And now I feel way more confident and happy because of that.",
             "Puppy": "Hey Pom! I love you so so much! You have always been nice to me, ever since we met you've just been nothing but kind. You are the sweetest person I've ever met! You always know how to make me smile when we talk, and whenever I'm feeling down you always cheer me up! You are the first person I talk to everyday when I wake up, and the last person I talk to everyday when I go to sleep! You are amazing to be around and I love every single second we spend together! Just talking to you always brightens my mood. You are so supportive of everything I do and always have my back, and I'll always have yours and support your every decision! If you ever need someone to talk to, to cry to, to hug, I'm right here, and I will always be right here with my arms open for you. I love you so so so much hun. Best Sis ever!",
+            "Queen": "Ilysm and whether your overcoming a challenge or winning a match, your always a great champion of the subreddit",
         };
 
         document.getElementById('noteText').textContent = texts[platform] || "No content available.";
